- improved rake tasks for users and status modules - fixed javascript bug in users module

--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -74,7 +74,7 @@
 	    <% end %>
 	  </td>
 	  <td>
-	    <label id="groups-error" class="error">error</label>  
+	    <label id="groups-error" class="error"></label>  
 	  </td>
 	</tr>
 	<tr>
@@ -93,7 +93,7 @@
 	  <% end %>
 	  </td>
 	  <td>
-	      <label id="def-group-error" class="error">error</label>
+	      <label id="def-group-error" class="error"></label>
 	  </td>
 	</tr>
        </table>
@@ -137,7 +137,7 @@
 	    %>
 	 </td>
 	 <td>
-            <label id="roles-error" class="error">error</label>
+            <label id="roles-error" class="error"></label>
 	 </td>
 	</tr>
        </table>
