--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -21,10 +21,11 @@
 
 <% content_for :head do %>
  <% if JSMIN == true %>  
-    <%= javascript_include_tag "users-min.js"-%>
-  <% else %>
-    <%= javascript_include_tag "jquery.quicksearch.js"-%>
+    <%= javascript_include_tag "/min/users-min.js"-%>
     <%= javascript_include_tag "select_dialog.js" %>
+  <% else %>
+    <%= javascript_include_tag "select_dialog.js" %>
+    <%= javascript_include_tag "jquery.quicksearch.js"-%>
     <%= javascript_include_tag "users.js" %>
   <% end %>
  
