--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -21,7 +21,7 @@
 <% content_for :head do %>
 
   <% if JSMIN == true %>
-    <%= javascript_include_tag "users-min.js"-%>
+    <%= javascript_include_tag "min/users-min.js"-%>
   <% else %>
     <%= javascript_include_tag "jquery.quicksearch.js"-%>
     <%= javascript_include_tag "select_dialog.js" %>
