--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -20,7 +20,7 @@
 -->
 
   <% if JSMIN == true %>
-    <%= javascript_include_tag "users-min.js"-%>
+    <%= javascript_include_tag "min/users-min.js"-%>
   <% else %>
     <%= javascript_include_tag "users.js" %>
     <%= javascript_include_tag "select_dialog.js" %>
@@ -136,4 +136,5 @@
 
 <% end %>
     <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
+    <div><input type="hidden" id="system_users_string" value="<%= @all_sys_users_string %>" /></div>
 </div>
