- show default cursor style if firewall is disabled

--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -377,6 +377,7 @@ table.patches td {
 .round10t { -moz-border-radius:10px 10px 0px 0px; -webkit-border-radius:10px 10px 0px 0px; }
 .round10b { -moz-border-radius:0px 0px 10px 10px; -webkit-border-radius:0px 0px 10px 10px; }
 
+.firewallForm_enabled { cursor: pointer;}
 .firewallForm_disabled { background-color:#fff; color:#ccc; cursor: default;}
 .label-image { width:14px; height:14px; vertical-align:baseline; }
 
