--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -533,6 +533,7 @@ fieldset fieldset
   font-size: 1.5em
   img
     vertical-align: middle
+    margin-right: 10px
 
 img.small-working-icon
   width: 20px
