--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -104,7 +104,7 @@
 <% end %>
 <% end %>
 
-<div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png' width="48px" height="48px"><%=_("Groups")%></div>
+<div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png' width="48px" height="48px"><%=_("Groups")%><span id="questionMark">?</span></div>
 <div class="plugin-content">
 
 <div id="search-userbar">
