--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -150,10 +150,6 @@
 	      <%= link_to _("Logout"), '/logout' %>
 	    </span>
 
-	    <span class="userbar-icon logout-icon">
-	      <a href="#" id="modal">Modal Dialog</a>
-	    </span>
-
 	    <form id="test" style="display:none;">
 	      <div style="display:inline-block; width:100%; background-color:#c5c5c5; color:#222; text-align:center; font-weight:bold; font-size:16px;">Add new user</div>
 	      <p>
@@ -218,7 +214,7 @@
       <%= yield %>
     </div>
 
-    <div id="footer">
+    <div id="footer" style="clear:both; overflow:hidden;">
       <div class="copy">&copy; 2009,2010 Novell, Inc.</div>
     </div>
 
