--- a/webclient/public/stylesheets/customInput.css
+++ b/webclient/public/stylesheets/customInput.css
@@ -1,3 +1,12 @@
+/*-------------------------------------------------------------------- 
+ * jQuery plugin: customInput()
+ * by Maggie Wachs and Scott Jehl, http://www.filamentgroup.com
+ * Copyright (c) 2009 Filament Group
+ * Dual licensed under the MIT (filamentgroup.com/examples/mit-license.txt) and GPL (filamentgroup.com/examples/gpl-license.txt) licenses.
+ * Article: http://www.filamentgroup.com/lab/accessible_custom_designed_checkbox_radio_button_inputs_styled_css_jquery/  
+ * Usage example below (see comment "Run the script...").
+--------------------------------------------------------------------*/
+
 /*CSS for customized radio buttons and check boxes */
 .custom-checkbox, .custom-radio { position: relative; display:inline-block;}
 .custom-checkbox input, 
