--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -815,7 +815,7 @@ input.computed { opacity: 0.5; }
 #userbar span.userbar-icon:before { vertical-align:-50%; line-height:10px; padding-right:1px; }
 #userbar span.home-icon:before { content:url(../images/control-panel-home.png); }
 #userbar span.user-icon:before { content:url(../images/control-panel-user.png); }
-#userbar span.language-icon {border:1px solid #888; color:#e9e9e9; -moz-border-radius:2px; -webkit-border-radius:2px; padding:2px 3px 2px 6px; text-align:center; margin-right:4px; background-color:#7f7f7f; text-shadow: 0 -1px 1px #444; }
+#userbar span.language-icon {color:#e9e9e9; -moz-border-radius:2px; -webkit-border-radius:2px; padding:2px 3px 2px 6px; text-align:center; margin-right:4px; background-color:#999; text-shadow: 0 0px 0px #444; }
 #userbar span.logout-icon:before { content:url(../images/control-panel-logout.png); }
 
 span.plugin-shortcut { display:inline-block; background: url(../icons/plugin-icons.png) no-repeat top left;  width: 48px; height: 48px; }
