--- a/webclient/public/stylesheets/webyast-firewall.css
+++ b/webclient/public/stylesheets/webyast-firewall.css
@@ -1,3 +1,21 @@
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation. 
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software 
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
+
 #firewallForm .left { float:left; overflow:hidden;}
 #firewallForm .right { float:right; overflow:hidden; }
 
@@ -11,29 +29,23 @@
   text-shadow: 0px 1px 0px #fff;
   min-width:80px; 
   font-family: Arial;
+  
   -moz-box-shadow: 0px 0px 1px #666;
   -webkit-box-shadow: 0px 0px 1px #666;
 }
 
-#on.active, #off.active { 
-  background: -moz-linear-gradient(center bottom, #357F2C 0%, #71D048  100%);
-  
-/*   border: 1px solid #3E9533; */
+#on:hover, #off:hover { background: url("/images/gradientx40.png") repeat-x scroll 0 0 #eee;  }
+#off { border-left:0px; margin-left:-5px; }
 
+#on.active, #off.active { 
   border-right:0;
-  -moz-box-shadow: inset 0px 0px 1px #000;
-  -webkit-box-shadow: inset 0px 0px 1px #000;
-  color:#eaeaea;
+  color:#efefef;
   text-shadow: 0 -1px 0px #333;
   font-weight:bold;
-}
 
-#on:hover, #off:hover { background: url("/images/gradientx40.png") repeat-x scroll 0 0 #eee;  }
-
-#on:active,  #off:active { 
-/*   background: url("/images/gradientx40.png") repeat-x scroll 0 0 #BEEA9D;  */
+  background:#39A33A;
   background: -moz-linear-gradient(center bottom, #39A33A 0%, #71D048 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#39A33A), to(#71D048));
+  background: -webkit-gradient(linear, left top, left bottom, from(#71D048), to(#39A33A));
   
   -moz-box-shadow: inset 0px 0px 1px #000; 
   -webkit-box-shadow: inset 0px 0px 1px #000; 
@@ -41,9 +53,7 @@
 
 #on.active:hover, #off.active:hover {
   font-weight:bold;
-/*   background: url("/images/gradientx40.png") repeat-x scroll 0 0 #afd891; */
   background: -moz-linear-gradient(center bottom, #39A33A 0%, #71D048 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#39A33A), to(#71D048));
+  background: -webkit-gradient(linear, left top, left bottom, from(#71D048), to(#39A33A));
 }
 
-#off { border-left:0px; margin-left:-5px; }
