--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -1,3 +1,21 @@
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation. 
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software 
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
+
 #modalWindow {
   position:absolute; 
   z-index:1001;
@@ -8,19 +26,21 @@
   -moz-box-shadow: 0px 0px 10px #777;
   vertical-align:middle;
   padding:10px 20px;
+  display:block;
 }
 
 #modalWindowShade { 
 /*   background: url("../images/stripes-bg.png") repeat scroll 0 0 transparent; */
   background-color: #eee; 
-  opacity:0.5;
-  height: 100%; 
-  width: 100%; 
-  overflow: hidden; 
   position:absolute; 
+  width: 100%;
+  height:100%; 
+  
+  opacity:0.5;
+  -moz-opacity:0.5;
+  display:block;
+   top:0; left:0;
   -moz-box-shadow: inset 0px 0px 300px #222;
-  top:0; 
-  left:0; 
   z-index:1000; 
 }
 
@@ -36,7 +56,7 @@
 div.mpopup { font-weight:bold; font-size:20px; }
 
 div.mpopup, div.mdialog {
-  color:#555;
+  color:#444;
   text-shadow: 0 1px 1px #fff;
   vertical-align:middle;
   padding:0;
@@ -51,7 +71,7 @@ div.mpopup img {
 }
 
 /* Dialog */
-div.mdialog { width:20%; border:1px solid grey;  font-weight:bold; font-size:18px; }
+div.mdialog { min-width:20%; border:1px solid grey;  font-weight:bold; font-size:16px; }
 div.mdialog img { height:64px; width:64px; margin-right:10px; vertical-align:middle; }
 div.mdialog input[type="button"]{ min-width:50px; width:25%; float:right; display:inline-block; margin-left:2px; }
 
@@ -59,7 +79,7 @@ div.mleftcontainer { float:left; min-height:60px; width:20%; text-align:center; 
 div.mrightcontainer { float:right; min-height:60px; width:80%; text-align:center; border:0px solid grey; clear:right; overflow:hidden; }
 div.mrightcontainer div { text-align:center; vertical-align:middle; display:block; width:100%; }
 div.mrightcontainer hr { color:#eee; }
-div.mdevider { color:#888; }
+div.mdevider { color:#888; height:10px; margin-bottom:5px; border-bottom: 1px solid #a0a0a0; }
 
 b.mwarning { color:#bb4d4d; /*text-decoration: blink;*/ }
 b.minfo { color:#999; /*text-decoration: blink;*/ }
